# GXP_AI_agent

./: README.md  TODO  parcing.py  pyproject.toml
config/: config.yaml
core/dataloader/: document_set.py
core/embeddings/: model.py
core/llm/: model.py  rag_pipeline.py
core/prompts/: llm_prompt.py
core/vectordb/: index.py  vectore_store.py
tests/docs/: 1. Docset.py  2. Embeddings ChatGPT.py  2. Embeddings Local.py  3. FAISS.py
tests/models/: 1. LLM ChatGPT.py  1. LLM Local.py  2. RAG.py
texts/:  Руководство 151.docx  err_31032022_51_att.docx  ~$r_31032022_51_att.docx  Изменение 110.doc  Изменение 34.docx  Изменение 67.docx  Изменение 80.doc  Изменения 14.docx  Изменения 36.doc  Изменения 55.docx  Изменения 65.docx  Изменения 81.doc  Изменения 9.docx  Концепция 119.doc  Номерклатура 172.docx  Перечень 88.docx  Положение 121.docx  Положение 75.docx  Правила 20 2.docx  Правила 30.docx  Правила 77.docx  Правила 78.docx  Правила 79.docx  Правила 81.docx  Правила 85.docx  Правила 87.docx  Правила 89.docx  Правило 178.docx  Приложение 13.docx  Приложение 14.docx  Приложение 15.docx  Приложение 19.docx  Приложение 20.docx  Приложение 23.docx  Рекомендации 30.docx  Рекомендации 89.docx  Рекомендация 1.docx  Рекомендация 10.docx  Рекомендация 11 2.docx  Рекомендация 11.docx  (+97 more)
web/: Start_Page.py
